--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,6 @@
     "moment": "~2.5",
     "less.js": "~1.6",
     "font-awesome": "~4.0",
-    "ng-i18next": "0.3.5",
+    "ng-i18next": "0.3.5"
   }
 }
