--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "grunt": "~0.4",
     "grunt-angular-templates": "~0.5",
+    "grunt-autoprefixer": "^1.0.1",
     "grunt-browser-output": "0.1.0",
     "grunt-contrib-clean": "~0.5",
     "grunt-contrib-concat": "~0.5",
