--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-dom-munger": "~3.4",
     "grunt-karma": "~0.8.3",
     "grunt-ng-annotate": "^0.4.0",
+    "grunt-protractor-runner": "^1.1.4",
     "karma": "~0.12.6",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
