--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-ui-utils": "~0.1",
     "angular-bootstrap": "~0.10",
     "angular-moment": "~0.8.2",
+    "angular-cookies": "~1.3.8",
     "moment": "~2.5",
     "less.js": "~1.6",
     "font-awesome": "~4.0",
