--- a/bower.json
+++ b/bower.json
@@ -25,5 +25,8 @@
     "less.js": "~1.6",
     "font-awesome": "~4.0",
     "ng-i18next": "0.3.5"
+  },
+  "resolutions": {
+    "angular": "1.3.8"
   }
 }
