--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "moment": "~2.5",
     "less.js": "~1.6",
     "font-awesome": "~4.2",
-    "ng-i18next": "0.3.5"
+    "ng-i18next": "0.3.5",
+    "ngInfiniteScroll": "~1.2.0"
   },
   "resolutions": {
     "angular": "1.3.8"
