--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "less.js": "~1.6",
     "font-awesome": "~4.2",
     "ng-i18next": "0.3.5",
-    "ngInfiniteScroll": "~1.2.0"
+    "ngInfiniteScroll": "~1.2.0",
+    "papaparse": "~4.1.0"
   },
   "resolutions": {
     "angular": "1.2.28"
