--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "font-awesome": "~4.2",
     "ng-i18next": "0.3.5",
     "ngInfiniteScroll": "~1.2.0",
-    "papaparse": "~4.1.0"
+    "papaparse": "~4.1.0",
+    "file-saver": "*"
   },
   "resolutions": {
     "angular": "1.2.28"
