--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-bootstrap": "~0.10",
     "angular-moment": "~0.8.2",
     "angular-cookies": "~1.3.8",
+    "angular-drag-and-drop-lists": "~1.2.0",
     "moment": "~2.5",
     "less.js": "~1.6",
     "font-awesome": "~4.2",
