--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "ng-i18next": "0.3.5",
     "ngInfiniteScroll": "~1.2.0",
     "papaparse": "~4.1.0",
-    "file-saver": "*"
+    "file-saver": "*",
+    "ng-file-upload": "3.0.7"
   },
   "resolutions": {
     "angular": "1.2.28"
