--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
   ],
   "dependencies": {
     "jquery": "~2.0",
-    "underscore": "~1.5",
+    "underscore": "*",
     "bootstrap": "~3.1",
     "angular": "~1.2",
     "angular-sanitize": "~1.2.25",
