--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "ngInfiniteScroll": "~1.2.0",
     "papaparse": "~4.1.0",
     "file-saver": "*",
-    "ng-file-upload": "3.0.7"
+    "ng-file-upload": "3.0.7",
+    "ng-autofocus": "~0.0.1"
   },
   "resolutions": {
     "angular": "1.2.28"
