--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "papaparse": "~4.1.0",
     "file-saver": "*",
     "ng-file-upload": "3.0.7",
-    "ng-autofocus": "~0.0.1"
+    "ng-autofocus": "~0.0.1",
+    "angular-load": "~0.2.0"
   },
   "resolutions": {
     "angular": "1.2.28"
