--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "angular-mocks": "~1.2",
     "angular-ui-router": "~0.2.11",
     "angular-ui-utils": "~0.2.2",
-    "angular-bootstrap": "~0.10",
+    "angular-bootstrap": "0.10",
     "angular-moment": "~0.8.2",
     "angular-cookies": "~1.3.8",
     "angular-drag-and-drop-lists": "~1.2.0",
