--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "ng-file-upload": "3.0.7",
     "ng-autofocus": "~0.0.1",
     "angular-load": "~0.2.0",
-    "css-element-queries": "~0.0.2"
+    "css-element-queries": "~0.0.2",
+    "rng-js": "~1.0.1"
   },
   "resolutions": {
     "angular": "1.2.28"
