Upgrade ng-i18next and force i18next to stay at version 1.9.0

--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "moment": "~2.5",
     "less.js": "~1.6",
     "font-awesome": "~4.3",
-    "ng-i18next": "0.3.5",
+    "i18next":"1.9.0",
+    "ng-i18next": "0.4.2",
     "ngInfiniteScroll": "~1.2.0",
     "papaparse": "~4.1.0",
     "file-saver": "*",
