--- a/bower.json
+++ b/bower.json
@@ -9,24 +9,25 @@
   ],
   "dependencies": {
     "jquery": "~2.0",
-    "underscore": "*",
+    "underscore": "1.8.2",
     "bootstrap": "~3.1",
     "angular": "~1.2",
     "angular-sanitize": "~1.2.25",
     "angular-animate": "~1.2",
     "angular-resource": "~1.2",
     "angular-mocks": "~1.2",
-    "angular-ui-router": "~0.2.11",
-    "angular-ui-utils": "~0.2.2",
+    "angular-ui-router": "0.2.13",
+    "angular-ui-utils": "0.2.2",
     "angular-bootstrap": "0.10",
     "angular-moment": "~0.8.2",
-    "angular-cookies": "~1.3.8",
+    "angular-cookies": "1.3.12",
     "angular-drag-and-drop-lists": "~1.2.0",
     "moment": "~2.5",
     "less.js": "~1.6",
     "font-awesome": "~4.3",
     "ng-i18next": "0.3.5",
-    "ngInfiniteScroll": "~1.2.0",
+    "i18next": "1.7.7",
+    "ngInfiniteScroll": "1.2.0",
     "papaparse": "~4.1.0",
     "file-saver": "*",
     "ng-file-upload": "3.0.7",
